Use Jetty transport with tool to remove deprecated internal JDK dependencies
Signed-off-by: Wouter Born <github@maindrain.net>